--- a/index.html
+++ b/index.html
@@ -724,7 +724,7 @@
               extract action items, and share updates across channels.
             </p>
             <div class="hero-meta">
-              <span>3 sessions · 3 hours each</span>
+              <span>3 sessions · 3 hours each + Champions sessions</span>
               <span>Beginner-friendly · No coding required</span>
               <span>Focus: Gemini, Gems &amp; NotebookLM, Google Workflows</span>
             </div>
@@ -1244,4 +1244,5 @@
   </script>
 </body>
 </html>
+
 
